Bug 306814 - Open with dialog appears when clicking open with <application_name>
Summary: Open with dialog appears when clicking open with <application_name>
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: internal browser (other bugs)
Version First Reported In: 4.9
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-14 22:08 UTC by Avihay
Modified: 2012-10-31 17:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments
Screenshot of file download/open dialog box (31.79 KB, image/jpeg)
2012-10-18 05:31 UTC, Avihay
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Avihay 2012-09-14 22:08:28 UTC
The "Open with:" dialog appears when clicking "open with <application_name>", in the open file dialog box, the one that appears when you click a link to a file. you then have to manually enter <application_name>, or search in the known applications tree for it.

This happens in two places in the open file dialog box:
1) In the button for the default app (labeled "Open with <application_name>")
2) In every entry in the menu that pops up when you click the "<file_in_folder_icon> Open with <down_arrow>" button (this should happen only for the last entry, labled "Open with...")

Reproducible: Always

Steps to Reproduce:
1.Find a link to a file of a type that doesn't have a kpart preview to it, but has one or more known programs that open it.
2.Click said link.
3.Click any Open with button or menu entry that doesn't end with "..."
Actual Results:  
The "Open with:" dialog appears where you have to manually enter <application_name>, or search in the known applications tree for it.

Expected Results:  
Open the file imidiatly with the selected program

Dates back to KDE 4.8.x ond possibly earlyer.
Comment 1 Laurent Montel 2012-10-03 17:08:24 UTC
Could you provide a example where I can test it ?
Comment 2 Avihay 2012-10-07 21:35:17 UTC
I guess I can, every entry here:
http://www.animebit.net/feed
hit either of the two links after the text Enclosure: and before the text (application/x-bittorrent, 12 B)
Happens in other places too, but I can't recall one right now.
Comment 3 Laurent Montel 2012-10-10 06:38:25 UTC
"2) In every entry in the menu that pops up when you click the "<file_in_folder_icon> Open with <down_arrow>" button (this should happen only for the last entry, labled "Open with...")" I don't have it
could you create a screenshot please ?
Comment 4 Avihay 2012-10-18 05:31:35 UTC
Created attachment 74621 [details]
Screenshot of file download/open dialog box

Tthe button you specifically asked about is the one that is pressed in the picture.
Comment 5 Laurent Montel 2012-10-18 07:24:54 UTC
Ok I see the bug.
Will look at it.
IT's a bug in kdelibs. But will look at now
Comment 6 Laurent Montel 2012-10-18 12:31:06 UTC
Git commit 6df4713cbf33fce9ff8c47c1afb424165f321577 by Montel Laurent.
Committed on 18/10/2012 at 14:30.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 306814 - Open with dialog appears when clicking open with

<application_name>

If we select a service uses it.

FIXED-IN: 4.9.3

M  +11   -3    kparts/browserrun.cpp

http://commits.kde.org/kdelibs/6df4713cbf33fce9ff8c47c1afb424165f321577
Comment 7 Laurent Montel 2012-10-18 12:31:30 UTC
it was a kdelibs bug.
Fixed now in 4.9.3
Comment 8 David Faure 2012-10-31 13:50:36 UTC
Git commit f97e0a3d9a8ac806505e6b17927543b2627fcae0 by David Faure.
Committed on 31/10/2012 at 14:51.
Pushed by dfaure into branch 'KDE/4.9'.

KParts::BrowserRun: Restore behavior compatibility with kdelibs < 4.5.

Don't show application selection if the application isn't ready to
handle it. This bug was in my initial commit, a141c149.

M  +1    -2    kparts/browserrun.cpp

http://commits.kde.org/kdelibs/f97e0a3d9a8ac806505e6b17927543b2627fcae0
Comment 9 David Faure 2012-10-31 14:58:19 UTC
Git commit 2cf419ba4bc4c0660979fe9175e6311811a2a81c by David Faure.
Committed on 31/10/2012 at 15:59.
Pushed by dfaure into branch 'KDE/4.9'.

Trim double-quotes at the beginning and end of the mimetype string.

"application/x-bittorrent" with the double-quotes isn't a known mimetype.

M  +6    -0    kioslave/http/http.cpp

http://commits.kde.org/kdelibs/2cf419ba4bc4c0660979fe9175e6311811a2a81c
Comment 10 David Faure 2012-10-31 17:13:11 UTC
Git commit de121b0c5558636f60bea66ddc64f2f7616edabf by David Faure.
Committed on 31/10/2012 at 18:13.
Pushed by dfaure into branch 'KDE/4.9'.

Enable the "select an application" feature and this time it works.
(now fixed for real)

M  +11   -4    akregator/src/browserrun.cpp
M  +1    -0    akregator/src/browserrun.h

http://commits.kde.org/kdepim/de121b0c5558636f60bea66ddc64f2f7616edabf
Comment 11 Laurent Montel 2012-10-31 17:18:07 UTC
great
thanks david!