Fix Bug 306814 - Open with dialog appears when clicking open with

<application_name>

If we select a service uses it.

FIXED-IN: 4.9.3
BUG: 306814